resources/css/legacy.css
/* TODO get rid of mainpage, fullcontainer, leftcontainer, rightcontainer */
#mainpage {
  padding: 0;
  position: relative;
  min-height: 450px;
  display: grid;
  column-gap: 1rem;
  grid-template-columns: 1.329fr 0.671fr;
}

@media only screen and (max-width: 1023px) {
  #mainpage {
    display: block;
  }
}

#mainpage > .both {
  grid-column: span 2;
}

#fullcontainer, article {
  padding: 15px 20px;
  margin-bottom: 10px;
  border: 2px solid var(--embed-color);
  border-radius: 4px;
  align-self: start;
  background: var(--box-bg-color);
  background: linear-gradient(180deg, var(--box-bg-color) 0%, var(--bg-color) 100%);
  overflow: auto; /* 1 */
}

/*
 1: fix long contents pushing width, including right container, over the maximum container width
*/
#leftcontainer {
  padding: 15px 20px;
  margin-bottom: 10px;
  display: block;
  border: 2px solid var(--embed-color);
  border-radius: 4px;
  background: var(--box-bg-color);
  background: linear-gradient(180deg, var(--box-bg-color) 0%, var(--bg-color) 100%);
  overflow: auto; /* 1 */
}

#rightcontainer, aside {
  padding: 15px 20px;
  margin-bottom: 10px;
  border: 2px solid var(--embed-color);
  border-radius: 4px;
  align-self: start;
  background: var(--box-bg-color);
  background: linear-gradient(0deg, var(--box-bg-color) 0%, var(--bg-color) 100%);
  overflow: auto; /* 1 */
}

/* TODO replace with sections */
.component {
  overflow: hidden;
  margin-bottom: 1em;
}

.highlight {
  outline: 2px solid;
}

.TrueRatio {
  color: rgb(210, 210, 210);
}

.softcore {
  color: rgb(140,140,140);
}

.message-unread {
  font-weight: bold;
}

.inline-image {
  max-width: 100%;
  max-height: 300px;
}

/* TODO split below into components or replace with utility classes */

.embedded {
  padding: 6px 10px;
  border-radius: 4px;
  background: var(--embed-color);
}

#usercompletedgamescomponent {
  max-height: 30.0em;
  overflow-y: auto;
  overflow-x: hidden;
}

#devstatsscrollpane {
  max-height: 25.0em;
  overflow-y: auto;
}

.sortbyselector {
  padding: 1em 0;
}

.achievemententryicon {
  float: left;
  padding: 0 4px;
}

.ui-autocomplete {
  z-index: 30 !important;
}

